fixed loader and overlapping issue

--- a/src/app/pages/manage-subscriptions/payment-history/payment-history.component.css
+++ b/src/app/pages/manage-subscriptions/payment-history/payment-history.component.css
@@ -14,3 +14,10 @@
     margin-bottom: 10px;
     border: 1px solid #E0E0E0;
 }
+
+
+:host ::ng-deep .p-datatable-scrollable .p-datatable-thead {
+    position: sticky;
+    top: 0;
+    z-index: 0 !important;
+}
